<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_general">

        <CheckBoxPreference
            android:key="pref_sound"
            android:title="@string/pref_sound_title"
            android:defaultValue="false" />

        <ListPreference
            android:key="pref_max_flashcards"
            android:title="@string/pref_max_flashcards_title"
            android:entries="@array/pref_max_flashcards_entries"
            android:entryValues="@array/pref_max_flashcards_values"
            android:defaultValue="5" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_info">

        <Preference
            android:key="pref_build_version"
            android:title="@string/pref_build_version"/>

    </PreferenceCategory>

</PreferenceScreen>